--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.15",
+    "gsap": "^3.13.0",
     "next": "^15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
